Build the first Math Shape

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,8 +62,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Grid.cs" />
-    <Compile Include="Assets\Scripts\MathGrid.cs" />
-    <Compile Include="Assets\Scripts\OperationGrid.cs" />
+    <Compile Include="Assets\Scripts\MathBlock.cs" />
+    <Compile Include="Assets\Scripts\MathShape.cs" />
+    <Compile Include="Assets\Scripts\OperationBlock.cs" />
     <Compile Include="Assets\Scripts\Shape.cs" />
     <Compile Include="Assets\Scripts\Spawner.cs" />
     <Reference Include="UnityEditor.StandardEvents">
